[project]
name = "program-synth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.34.0",
    "pillow>=10.0.0",
    "numpy>=2.3.5",
    "matplotlib>=3.8.0",
    "groq>=1.0.0",
    "swig>=4.4.0",
    "gymnasium[box2d]>=1.2.3",
]
